Code corrected with few edits.

--- a/steps_exp(_1_x).ipynb
+++ b/steps_exp(_1_x).ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPfJUT9EYwEOVdqSujhA6ZE",
+      "authorship_tag": "ABX9TyNKnXS1uJNsrOPMP0or84d/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -202,9 +202,9 @@
         "trapezoid_integral, trapezoid_iterations = trapezoid(f, a, b, n, accuracy)\n",
         "adaptive_integral, adaptive_evaluations = adaptive_trapezoid(f, a, b, accuracy)\n",
         "\n",
-        "print(f\"Simpson's Rule: Integral = {simpson_integral}, Function = exp(-1/x), Iterations = {simpson_iterations}\")\n",
-        "print(f\"Trapezoidal Rule: Integral = {trapezoid_integral}, Function = exp(-1/x), Iterations = {trapezoid_iterations}\")\n",
-        "print(f\"Adaptive Trapezoidal Rule: Integral = {adaptive_integral}, Function = exp(-1/x), Evaluations = {adaptive_evaluations}\")\n",
+        "print(f\"Simpson: Integral = {simpson_integral}, Func = exp(-1/x), Iterations = {simpson_iterations}\")\n",
+        "print(f\"Trapezoidal: Integral = {trapezoid_integral}, Func = exp(-1/x), Iterations = {trapezoid_iterations}\")\n",
+        "print(f\"Adaptive Trapezoidal : Integral = {adaptive_integral}, Func = exp(-1/x), Evaluations = {adaptive_evaluations}\")\n",
         "\n",
         "\n",
         "\n",
@@ -217,17 +217,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "e3zrW3hJTRvh",
-        "outputId": "6ac87736-765d-45f8-9650-5fd2858f34f1"
+        "outputId": "70358dff-fb3a-4098-ca40-212a88a78913"
       },
-      "execution_count": 66,
+      "execution_count": 67,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Simpson's Rule: Integral = 9.57330168413237, Function = exp(-1/x), Iterations = 3\n",
-            "Trapezoidal Rule: Integral = 9.573283859693797, Function = exp(-1/x), Iterations = 2\n",
-            "Adaptive Trapezoidal Rule: Integral = 9.573226532291914, Function = exp(-1/x), Evaluations = 6\n"
+            "Simpson: Integral = 9.57330168413237, Func = exp(-1/x), Iterations = 3\n",
+            "Trapezoidal: Integral = 9.573283859693797, Func = exp(-1/x), Iterations = 2\n",
+            "Adaptive Trapezoidal : Integral = 9.573226532291914, Func = exp(-1/x), Evaluations = 6\n"
           ]
         }
       ]
